# purity

./: .env  .env.example  .gitignore  Cargo.toml  LICENSE  README.md
examples/: account_write.rs  account_write_alias.rs  client_write.rs  reader.rs  test-alias.rs
src/: client.rs  lib.rs  utils.rs
src/account/: mod.rs  purity_account.rs
src/client/: mod.rs
