[package]
name = "purity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# iota-client = {"2.0.1-rc.4", default-features = false, features = [ "message_interface", "tls" ]}
iota-client = "2.0.1-rc.4" # Apache-2.0 license
iota-wallet = "1.0.0-rc.5" # Apache-2.0 license
tokio = { version = "1.22.0", default-features = false, features = [ "macros", "rt-multi-thread", "time", "sync" ] } # MIT license
dotenv = "0.15.0" # MIT license
hex = "0.4.3" # MIT OR Apache-2.0 license
anyhow = "1.0.62" # MIT OR Apache-2.0 license
rand = "0.8.5" # MIT OR Apache-2.0 license

[lib]
name = "mylib"
path = "src/lib.rs"

[[bin]]
name = "writer"
path = "src/bin/writer.rs"

[[bin]]
name = "reader"
path = "src/bin/reader.rs"

[[bin]]
name = "test"
path = "src/bin/test.rs"
