[package]
name = "purity"
version = "0.1.0"
edition = "2021"
authors = [ "LINKS Foundation" ]
description = "Library to structure, to navigate and to consume data from/to the IOTA Tangle based on Stardust protocol. Compatible with SHIMMER network."
# documentation = ""
# homepage = ""
repository = "https://github.com/Cybersecurity-LINKS/purity"
license = "Apache-2.0"
keywords = [ "iota", "wallet" ]
categories = [ "cryptography::cryptocurrencies" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-sdk = { version = "1.1.2", features = ["stronghold", "rocksdb"]}
tokio = { version = "1.22.0", default-features = false, features = [ "macros", "rt-multi-thread", "time", "sync" ] }
dotenv = "0.15.0"
hex = "0.4.3"
anyhow = "1.0.62"
rand = "0.8.5"
async-trait = "0.1.68"
log = "0.4"
pretty_env_logger = "0.4"

[lib]
name = "purity"
path = "src/lib.rs"

[[example]]
name = "client-write"
path = "examples/client_write.rs"

[[example]]
name = "reader"
path = "examples/reader.rs"

[[example]]
name = "write"
path = "examples/account_write.rs"

[[example]]
name = "alias"
path = "examples/account_write_alias.rs"